--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,8 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID=your_project_id
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project.firebasestorage.app
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
+
+# Groq API (for AI Coach feature)
+# Get your free API key from: https://console.groq.com/keys
+GROQ_API_KEY=your_groq_api_key
+GROQ_MODEL=your_groq_model_name
