--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@tanstack/react-query": "^5.90.12",
     "@vercel/speed-insights": "^1.3.1",
     "canvas-confetti": "^1.9.4",
-    "clsx": "^2.1.0",
     "firebase": "^12.6.0",
     "framer-motion": "^11.0.0",
-    "gsap": "^3.12.5",
     "html2canvas": "^1.4.1",
     "isomorphic-dompurify": "^2.34.0",
     "lucide-react": "^0.445.0",
@@ -29,7 +28,6 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-markdown": "^10.1.0",
-    "recharts": "^2.12.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
